# otus-cpp

./: CMakeLists.txt  Doxyfile  allocator.h  annotated.html  annotated_dup.js  circle_8h.html  circle_8h.js  circle_8h__dep__incl.map  circle_8h__dep__incl.md5  circle_8h__incl.map  circle_8h__incl.md5  circle_8h_source.html  circle__primitive_8h.html  circle__primitive_8h__dep__incl.map  circle__primitive_8h__dep__incl.md5  circle__primitive_8h__incl.map  circle__primitive_8h__incl.md5  circle__primitive_8h_source.html  classCirclePrimitive-members.html  classCirclePrimitive.html  classCirclePrimitive.js  classCirclePrimitive__coll__graph.map  classCirclePrimitive__inherit__graph.md5  classController-members.html  classController.html  classController.js  classController__coll__graph.map  classController__coll__graph.md5  classDocument-members.html  classDocument.html  classDocument.js  classDocumentExporter-members.html  classDocumentExporter.html  classDocumentExporter.js  classDocumentExporter__coll__graph.map  classDocumentExporter__coll__graph.md5  classDocument__inherit__graph.map  classDocument__inherit__graph.md5  classIDocument-members.html  classIDocument.html  (+226 more)
.github/workflows/: doxygen_publisher.yml  release.yml
geometry/: circle.h  line.h  point.h  rect.h
helpers/: custom_to_string.h
model/: document.h  document_exporter.h  idocument.h  idocument_exporter.h
primitives/: circle_primitive.h  iprimitive.h  line_primitive.h  rect_primitive.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+9 more)
view/: iview.h  view.h
